<resources>
    <string name="app_name">jumjaReal</string>
    <string name="rePick">다시 열기</string>
    <string name="got_a_coupon">열쇠 1개를 획득하였습니다!</string>
    <string name="current_coupon_count">현재 열쇠 개수:</string>
    <string name="get_it_back">다시 얻기</string>
    <string name="ok">확인</string>
    <string name="braille">Braille</string>
    <string name="start">START!</string>
    <string name="pickup">상자 열기</string>
    <string name="share">공유 및 저장</string>
    <string name="go_home">홈으로 돌아가기</string>
    <string name="pick_right_now">상자 열기!</string>
    <string name="cancel">취소</string>
    <string name="pick_once">상자 열기</string>
    <string name="put_brailles_to_get_coupon">점자를 입력하여 열쇠를 얻으세요!</string>
    <string name="input_string"> 입력한 문자 </string>
    <string name="remove">지우기</string>
    <string name="put">입력</string>

    <string name="pickup_chest">뽑기상자</string>
    <string name="pickup_item">Pickup_item</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="game">Game</string>
    <string name="inputBraille"><![CDATA[<점자 입력>]]></string>
    <string name="back">뒤로</string>
    <string name="inventory">보관함</string>
    <string name="legendary">전설</string>
    <string name="img_key">img_key</string>
    <string name="cat">cat</string>
    <string name="background">background</string>
    <string name="two_zeros">00</string>
    <string name="put_one_letter">(한 글자씩 입력)</string>
    <string name="layout">layout</string>
</resources>