<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:gravity="center"
              android:background="#A4EFDE8D"
              tools:context=".PickActivity">

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="188dp"
            android:src="@drawable/frame26"
            android:contentDescription="@string/pickup_chest"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pick_right_now"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="25sp"
            android:textColor="#fff"
            android:textStyle="bold"
            android:shadowColor="@color/black"
            android:shadowDx="4"
            android:shadowDy="4"
            android:shadowRadius="6"
            />

    <TextView
            android:id="@+id/coupon"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="#fff"
            android:textStyle="bold"
            android:shadowColor="@color/black"
            android:shadowDx="4"
            android:shadowDy="4"
            android:shadowRadius="6"
            android:text="@string/current_coupon_count"
            android:layout_marginBottom="20dp"
            />

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            >

        <Button
                android:id="@+id/btn_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:background="@drawable/button2"
                android:text="@string/cancel"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_marginEnd="10dp"
                tools:ignore="ButtonStyle"/>

        <Button
                android:id="@+id/btn_once"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:background="@drawable/button4"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:text="@string/pick_once"
                tools:ignore="ButtonStyle"/>

    </LinearLayout>

</LinearLayout>