<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_height="match_parent"
             android:layout_width="match_parent"
             android:background="#A4EFDE8D"
        >

    <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <Button
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/back"
                android:id="@+id/btn_cancel"/>

        <Button
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/inventory"
                android:layout_marginEnd="10dp"
                android:id="@+id/btn_inventory"
                android:layout_gravity="right"
                tools:ignore="RtlHardcoded"/>

        <Button
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="right"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="12dp"
                android:id="@+id/btn_once"
                android:background="@drawable/box"
                tools:ignore="RtlHardcoded"/>

    </androidx.appcompat.widget.Toolbar>

    <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/sub_activity_background"
            android:alpha="0.35"
            android:contentDescription="@string/background"/>
    <TextView
            android:layout_marginTop="15dp"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_gravity="right"
            android:gravity="center"
            android:layout_marginEnd="110dp"
            android:textStyle="bold"
            android:background="@drawable/textview2"
            android:textSize="18sp"
            tools:ignore="RtlHardcoded"/>
    <ImageView
            android:layout_marginTop="17dp"
            android:layout_gravity="right"
            android:layout_marginEnd="150dp"
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:src="@drawable/key"
            android:contentDescription="@string/img_key"
            tools:ignore="RtlHardcoded"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:layout_gravity="right"
            android:id="@+id/key_count"
            android:text="@string/two_zeros"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginEnd="127dp"
            android:textSize="20sp"
            tools:ignore="RtlHardcoded"/>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginTop="100sp"
            android:layout_gravity="center_horizontal">

        <TextView
                android:layout_width="221dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/put_brailles_to_get_coupon"

                android:textColor="#fff"
                android:textStyle="bold"
                android:shadowColor="@color/black"
                android:shadowDx="4"
                android:shadowDy="4"
                android:shadowRadius="6"

                android:textSize="23sp"/>

        <TextView
                android:layout_width="177dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:shadowColor="@color/black"
                android:shadowDx="4"
                android:shadowDy="4"
                android:shadowRadius="6"
                android:text="@string/put_one_letter"
                android:textSize="20sp"/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="100dp"
            android:gravity="center"
            android:orientation="vertical"
            tools:context=".SubActivity"
            tools:ignore="UselessParent">

        <WebView
                android:id="@+id/translate"
                android:layout_width="1dp"
                android:layout_height="1dp"/>

        <TextView
                android:layout_width="177dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:shadowColor="@color/black"
                android:shadowDx="4"
                android:shadowDy="4"
                android:shadowRadius="6"
                android:text="@string/inputBraille"
                android:textSize="20sp"/>
        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:background="#B3FFFFFF"
                android:orientation="horizontal">

            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                <CheckBox
                        android:id="@+id/checkbox1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:buttonTint="@color/black"
                        android:gravity="center"/>

                <CheckBox
                        android:id="@+id/checkbox2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:buttonTint="@color/black"
                        android:gravity="center"/>

                <CheckBox
                        android:id="@+id/checkbox3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:buttonTint="@color/black"
                        android:gravity="center"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                <CheckBox
                        android:id="@+id/checkbox4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:buttonTint="@color/black"
                        android:gravity="center"/>

                <CheckBox
                        android:id="@+id/checkbox5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:buttonTint="@color/black"
                        android:gravity="center"/>

                <CheckBox
                        android:id="@+id/checkbox6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:buttonTint="@color/black"
                        android:gravity="center"/>
            </LinearLayout>
        </LinearLayout>


        <TextView
                android:layout_marginTop="16dp"
                android:id="@+id/braille"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:gravity="center"
                android:textStyle="bold"
                android:background="@drawable/textview1"
                android:textSize="18sp"/>

        <LinearLayout
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

            <Button
                    android:id="@+id/btn_remove"
                    android:layout_width="114dp"
                    android:layout_height="78dp"
                    android:layout_marginEnd="10sp"
                    android:text="@string/remove"
                    android:background="@drawable/button2"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    tools:ignore="ButtonStyle"/>

            <Button
                    android:id="@+id/btn_put"
                    android:layout_width="114dp"
                    android:layout_height="78dp"
                    android:text="@string/put"
                    android:background="@drawable/button2"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    tools:ignore="ButtonStyle"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:gravity="center"
                android:orientation="horizontal">

            <Button
                    android:id="@+id/btn_ok"
                    android:layout_width="173dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:text="@string/ok"
                    android:textStyle="bold"
                    android:background="@drawable/button4"
                    tools:ignore="ButtonStyle"/>
        </LinearLayout>


    </LinearLayout>
</FrameLayout>
